--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1206</width>
+    <width>1220</width>
     <height>765</height>
    </rect>
   </property>
@@ -260,7 +260,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>40</x>
        <y>30</y>
-       <width>141</width>
+       <width>101</width>
        <height>41</height>
       </rect>
      </property>
@@ -296,7 +296,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>250</x>
        <y>30</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -319,7 +319,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>450</x>
        <y>30</y>
-       <width>141</width>
+       <width>101</width>
        <height>41</height>
       </rect>
      </property>
@@ -329,7 +329,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>250</x>
        <y>70</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -378,7 +378,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>40</x>
        <y>70</y>
-       <width>141</width>
+       <width>101</width>
        <height>41</height>
       </rect>
      </property>
@@ -388,9 +388,87 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>450</x>
        <y>70</y>
-       <width>141</width>
+       <width>101</width>
        <height>41</height>
       </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_27">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>40</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mm</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_28">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>40</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mm</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_29">
+     <property name="geometry">
+      <rect>
+       <x>560</x>
+       <y>40</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mm</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_30">
+     <property name="geometry">
+      <rect>
+       <x>150</x>
+       <y>80</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>deg</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_31">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>80</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>deg</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_32">
+     <property name="geometry">
+      <rect>
+       <x>560</x>
+       <y>80</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>deg</string>
      </property>
     </widget>
    </widget>
@@ -553,7 +631,7 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>1000</x>
       <y>0</y>
-      <width>191</width>
+      <width>211</width>
       <height>281</height>
      </rect>
     </property>
@@ -565,7 +643,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>50</x>
        <y>30</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -575,7 +653,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>50</x>
        <y>70</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -585,7 +663,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>50</x>
        <y>110</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -595,7 +673,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>50</x>
        <y>150</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -605,7 +683,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>50</x>
        <y>190</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -615,7 +693,7 @@ p, li { white-space: pre-wrap; }
       <rect>
        <x>50</x>
        <y>230</y>
-       <width>141</width>
+       <width>111</width>
        <height>41</height>
       </rect>
      </property>
@@ -696,6 +774,84 @@ p, li { white-space: pre-wrap; }
      </property>
      <property name="text">
       <string>RZ</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_35">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>40</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mm</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_36">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>80</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mm</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_37">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>120</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>mm</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_38">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>160</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>deg</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_39">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>200</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>deg</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_40">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>240</y>
+       <width>41</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>deg</string>
      </property>
     </widget>
    </widget>
@@ -934,7 +1090,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1206</width>
+     <width>1220</width>
      <height>28</height>
     </rect>
    </property>
